Added home page (frontend + backend)

--- a/templates/user_register.html
+++ b/templates/user_register.html
@@ -54,7 +54,7 @@
   </style>
 </head>
 <body>
-{% if to_show %}
+{% if error %}
 <script type="text/javascript">
   alert("{{ error }}");
 </script>
