--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -76,42 +76,52 @@
   </ul>
 </div>
 </nav>
-<div class="container" style="padding-top: 50px;">
+<div class="container" style="padding-top: 10px;">
     <div class="panel-heading" style="text-align: center;">
-      <h3 class="text-primary" style="color: black;"><i class="fa fa-cutlery" aria-hidden="true"></i> Choose a category</h3>
+      <h3 class="text-primary" style="color: black; text-transform: uppercase;">{{cuisine_name}}</h3>
+      <h3 class="text-primary" style="color: black;"><i class="fa fa-cutlery" aria-hidden="true"></i> Choose a restaurant</h3>
     </div>
-    <div class="panel panel-default" style="text-align: center;">
+    <div id="content" class="panel panel-default" style="text-align: center; max-height: 420px; overflow-x: hidden; overflow-y: auto;">
         <div class="row" style="padding: 10px;">
           <a href="#" class="col s2 grid" style="margin-left: 90px; padding-top: 37px;">1</a>
           <a href="#" class="col s2 grid" style="padding-top: 37px;">2</a>
           <a href="#" class="col s2 grid" style="padding-top: 37px;"">3</a>
           <a href="#" class="col s2 grid"  style="padding-top: 37px;">4</a>
         </div>
-        <div class="row" style="padding: 10px; margin-top: -100px;">
-          <a href="#" class="col s2 grid" style="margin-left: 90px; padding-top: 37px;">1</a>
-          <a href="#" class="col s2 grid" style="padding-top: 37px;">2</a>
-          <a href="#" class="col s2 grid" style="padding-top: 37px;"">3</a>
-          <a href="#" class="col s2 grid"  style="padding-top: 37px;">4</a>
-        </div>
-        <div class="row"><br></div>
     </div>
 </div>
 </form> 
 </div>
 </body>
 <script type="text/javascript">
-    $.get("/cuisines", function( data ) {
-        var values = [], keys = [];
+    $.get("/cuisines/{{cuisine_id}}", function( data ) {
+        var values = [], keys = [], i = 0;
         $.each(data, function(key,value){
-            keys.push(key);
-            values.push(value);
+            if(value.length < 20){
+		        keys.push(key);
+	            values.push(value);
+	            i++;
+	        }
+	        if(i >= 4 && i%4 == 0){
+				var $newDiv = $("<div/>")   // creates a div element
+				.attr("style", "padding: 10px; margin-top: -100px;")  // adds the id
+				.addClass("row")   // add a class
+				.html('<a href="#" class="col s2 grid" style="margin-left: 90px; padding-top: 37px;">1</a><a href="#" class="col s2 grid" style="padding-top: 37px;">2</a><a href="#" class="col s2 grid" style="padding-top: 37px;">50</a><a href="#" class="col s2 grid"  style="padding-top: 37px;">4</a>');
+				$("#content").append($newDiv);
+	        }
         });
-        var i = 0;
+        n = i;
+        i = 0;
         $('.grid').each(function() {
-            $(this).html(values[i]);
-            $(this).attr("href", "/home/cuisines/"+keys[i]); 
-            i++;
+    	    if(i < n){
+	    	    $(this).html(values[i]);
+	            $(this).attr("href", "/home/cuisines/{{cuisine_id}}/"+keys[i]); 
+	        }else{
+	        	$(this).remove();
+	        }
+	        i++;
         });
+		$("#content").append('<div class="row"><br></div>');
     });
 </script>
 </html>
