--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -73,7 +73,7 @@
   <ul class="right hide-on-med-and-down">
     <li><a href="/home" title="Home page"> <i class="fa fa-home" style="font-size: 1.5em;" aria-hidden="true"></i></a></li>
     <li><a href="/home/order/history" title="View order history"> <i class="fa fa-history" style="font-size: 1.5em;" aria-hidden="true"></i></a></li>
-    <li><a href="javascript:void(0)" onclick="saveData();" title="View Cart"><i class="fa fa-shopping-cart" style="font-size: 1.5em;" aria-hidden="true"></i></a></li>
+    <li><a href="/home/cuisines/{{cuisine_id}}/{{res_uname}}/checkout" title="Logout"> <i class="fa fa-cart-arrow-down"  style="font-size: 1.5em;" aria-hidden="true"></i></a></li>
     <li><a href="/logout" title="Logout"> <i class="fa fa-power-off" style="font-size: 1.5em;" aria-hidden="true"></i></a></li>
   </ul>
 </div>
@@ -82,98 +82,103 @@
     <div class="panel-heading" style="text-align: center;">
       <h3 class="text-primary" style="color: black;"><i class="fa fa-cutlery" aria-hidden="true"></i>&nbsp;&nbsp;{{res_name}}</h3>
     </div>
-    <div class="panel panel-default" style="max-height: 420px; overflow-x: hidden; overflow-y: auto;">
-        <div class="row">
+    <div class="row">
+        <form class="col s12" action="#">
+          <div class="row">
+            <div class="input-field col s6">
+              <i class="material-icons prefix fa fa-user-circle" aria-hidden="true"></i>
+              <input id="icon_prefix" type="text" class="validate" name="fname" required>
+              <label for="icon_prefix">First Name</label>
+            </div>
+            <div class="input-field col s6">
+              <i class="material-icons prefix fa fa-phone" aria-hidden="true"></i>
+              <input id="icon_telephone" type="number" class="validate" name="telephone" required>
+              <label for="icon_telephone">Telephone</label>
+            </div>
+          </div>
+          <div class="row">
+            <div class="input-field col s12">
+              <i class="material-icons prefix fa fa-address-book" aria-hidden="true"></i>
+              <textarea id="textarea1" class="materialize-textarea" name="address" required></textarea>
+              <label for="textarea1">Address</label>
+            </div>
+          </div>
+        </form>
+    </div>
+    <div id="content" class="panel panel-default" style="max-height: 420px; overflow-x: hidden; overflow-y: auto;">
+        <div class="row" style="text-align: center; font-weight: 700; font-size: 25px;">
             <div class="input-field col s4 offset-s4">
-                <select id="catdropdown">
-                  <option value="" disabled selected>Choose a category</option>
-                </select>
+                Bill
             </div>
         </div>
-        <table id="content" class="striped centered responsive-table">
+        <table class="striped centered responsive-table">
         <thead>
-          <tr>
-              <th data-field="name">Name</th>
-              <th data-field="price">Price</th>
-              <th data-field="quantity">Quantity</th>
-          </tr>
+            <tr>
+                <th data-field="name">Name</th>
+                <th data-field="price">Price</th>
+                <th data-field="quantity">Quantity</th>
+                <th data-field="itot">Item total</th>
+            </tr>
         </thead>
         <tbody id="tcontent">
             <!-- Table content          -->
         </tbody>
         </table>
     </div>
+      <button class="btn waves-effect waves-light" onclick="submit()">Place order</button>
+      <div class="row"></div>
 </div>
 </form> 
 </div>
 <div style="position: fixed; bottom: 20px; right: 60px; font-size: 1.5em;" id="total" class="text-primary"></div>
 </body>
 <script type="text/javascript">
-    var j = 0;
-    var cid, cname, name, price, prev, optag, menu, quan;
-    cid = [];
-    name = [];
-    menu = [];
-    price = [];
-    cname = [];
-    quan = [];
-    prev = "";
-    $("#total").html("Total = "+getTot());
-    function saveData(){
-        if(getTot() == 0){
-            alert("Cart is empty");
-            return;
-        }
-        sessionStorage.setItem('name', name);
-        sessionStorage.setItem('price', price);
-        sessionStorage.setItem('quan', quan);
-        window.location='/home/cuisines/{{cuisine_id}}/{{res_uname}}/cart';
-    }
+    var name, price, quan;
+    name = sessionStorage.getItem('name').split(',');
+    price = sessionStorage.getItem('price').split(',');
+    quan = sessionStorage.getItem('quan').split(',');
+    var xname = name.split(',');
     function getTot(){
         var tot = 0;
-        for(var i = 0; i < menu.length; i++){
+        for(var i = 0; i < quan.length; i++){
             tot += price[i]*quan[i];
         }
         return tot;
     }
-    function set(){
-        var f = $("input:focus").attr('data-id');
-        var val = $("input:focus").val();
-        quan[f] = val;
-        $("#total").html("Total = "+getTot());
+    for(var k = 0; k < quan.length; k++){
+        if(quan[k] != "0"){
+            trow = "<tr><td>"+ xname[k] +"</td><td>"+ price[k] +"</td><td>"+quan[k]+"</td><td>"+parseInt(price[k])*parseInt(quan[k])+"</td></tr>";
+            $("#tcontent").append(trow);
+        }
     }
-    $(document).ready(function() {
-        $.get("/cuisines/{{cuisine_id}}/{{res_uname}}", function( data ) {
-            menu = data;
-            var tname = [];
-            for (i = 0; i < data.length; i++) {
-                if(prev != data[i][5]){
-                    cid.push(i);
-                    cname.push(data[i][5]);
-                    j++;
-                }
-                tname.push(data[i][2]);
-                price[i] = data[i][3];
-                quan[i] = 0;
-                prev = data[i][5];
-            }
-            name = tname;
-            cid.push(i);
-            for(i = 0; i < j; i++){
-                optag = "<option value="+i+">"+cname[i]+"</option>";
-                $("#catdropdown").append(optag);
-            }
-            $('select').material_select();
-            $("#content").append('<div class="row"><br></div>');
-        });
-        $("#catdropdown").on('change', function() {
-            var p = parseInt($('option:selected', this).val()), trow, k;
-            $("#tcontent").find("tr").remove();
-            for(k = cid[p]; k < cid[p+1]; k++){
-                trow = "<tr><td>"+ menu[k][2] +"</td><td>"+ menu[k][3] +"</td><td><input data-id='"+k+"' style='width: 4em' min='0' type='number' class='validate' value='"+quan[k]+"' oninput='set()'></td></tr>";
-                $("#tcontent").append(trow);
-            }
-        });    
-    });
+    function submit(){
+        var n = sessionStorage.getItem('name'), p = sessionStorage.getItem('price'), q = sessionStorage.getItem('quan');
+        var Fname = $("#icon_prefix").val();
+        var Telephone = $("#icon_telephone").val();
+        var Address = $("#textarea1").val();
+        if(Fname.length == 0 || Telephone.length == 0 || Address.length == 0){
+            alert("Please fill in all fields");
+            return;
+        }
+        console.log(n);
+        console.log(p);
+        console.log(q);
+        $.post( 
+          "/home/cuisines/{{cuisine_id}}/{{res_uname}}/order",
+          { fname: Fname,
+            telephone: Telephone,
+            address: Address,
+            iname: n,
+            iprice: p,
+            iquan: q
+          },
+          function(data) {
+            alert(data);
+            sessionStorage.clear();
+            window.location = "/home";
+          }
+        );
+    }
+    $("#content").append('<div class="row"></div><div style="float: right; position: relative; right: 85px; font-size: 20px;">Total = '+getTot()+'</div><div class="row"></div>');
 </script>
 </html>
