--- a/templates/restaurants.html
+++ b/templates/restaurants.html
@@ -71,7 +71,7 @@
   <div class="brand-logo"><i class="fa fa-user" aria-hidden="true"></i>Welcome {{fname}}</div>
   <div class="brand-logo" style="left: 550px;"><i class="fa fa-location-arrow" aria-hidden="true"></i> Kolkata</div>
   <ul class="right hide-on-med-and-down">
-    <li><a href="" title="Search a restaurant"><i class="fa fa-search" style="font-size: 1.5em;" aria-hidden="true"></i></a></li>
+    <li><a href="/home" title="Home page"> <i class="fa fa-home" style="font-size: 1.5em;" aria-hidden="true"></i></a></li>
     <li><a href="/logout" title="Logout"> <i class="fa fa-power-off" style="font-size: 1.5em;" aria-hidden="true"></i></a></li>
   </ul>
 </div>
